--- a/.jscsrc
+++ b/.jscsrc
@@ -5,5 +5,6 @@
   "requireTrailingComma": false,
   "disallowTrailingComma": true,
   "validateQuoteMarks": "\"",
-  "maximumLineLength": 100
+  "maximumLineLength": 100,
+  "requireCamelCaseOrUpperCaseIdentifiers": false
 }
