--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "scripts": {
     "compile": "babel src --out-dir dist --source-maps",
     "test": "eslint src",
-    "start": "npm test && npm run compile && node dist/main.js"
+    "debug": "npm run compile && node-debug dist/main.js",
+    "start": "npm run compile && node dist/main.js"
   },
   "engines": {
     "node": "4.x.x"
   },
   "dependencies": {
+    "adbkit": "^2.3.1",
+    "axios": "^0.7.0",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
+    "bunyan": "^1.5.1",
+    "command-line-args": "^2.1.1",
+    "command-line-usage": "^2.0.1",
     "eslint": "^1.3.1",
-    "bunyan": "^1.5.1"
+    "lodash": "^3.10.1",
+    "stringify-object": "^2.3.1"
   }
 }
