--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "babel-eslint": "^4.1.3",
     "bunyan": "^1.5.1",
     "command-line-args": "^2.1.1",
-    "command-line-usage": "^2.0.1",
+    "download": "^4.4.1",
     "eslint": "^1.3.1",
-    "lodash": "^3.10.1",
-    "stringify-object": "^2.3.1"
+    "lodash": "^3.10.1"
   }
 }
