--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "compile": "babel src --out-dir dist --source-maps",
-    "test": "eslint src",
-    "debug": "npm run compile && node-debug dist/main.js",
-    "start": "npm run compile && node dist/main.js"
+    "prepublish": "babel src --out-dir dist --source-maps",
+    "debug": "npm run prepublish && node-debug dist/main.js",
+    "start": "npm run prepublish && node dist/main.js"
   },
   "engines": {
     "node": "4.x.x"
@@ -18,7 +17,7 @@
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
     "bunyan": "^1.5.1",
-    "command-line-args": "^2.1.1",
+    "docopt": "^0.6.2",
     "download": "^4.4.1",
     "eslint": "^1.3.1",
     "lodash": "^3.10.1"
