--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
     "bunyan": "^1.5.1",
+    "colors": "^1.1.2",
     "docopt": "^0.6.2",
     "download": "^4.4.1",
     "eslint": "^1.3.1",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "text-table": "^0.2.0"
   }
 }
