--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "axios": "^0.7.0",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
+    "bluebird": "^3.0.5",
     "bunyan": "^1.5.1",
     "colors": "^1.1.2",
     "docopt": "^0.6.2",
     "download": "^4.4.1",
+    "download-file": "^0.1.5",
     "eslint": "^1.3.1",
     "lodash": "^3.10.1",
-    "text-table": "^0.2.0"
+    "text-table": "^0.2.0",
+    "wgetjs": "^0.3.6"
   }
 }
