--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "download-file": "^0.1.5",
     "eslint": "^1.3.1",
     "lodash": "^3.10.1",
+    "read": "^1.0.7",
     "text-table": "^0.2.0",
-    "wgetjs": "^0.3.6"
+    "wgetjs": "^0.3.6",
+    "yn": "^1.2.0"
   }
 }
