--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "bunyan": "^1.5.1",
     "colors": "^1.1.2",
     "docopt": "^0.6.2",
-    "download": "^4.4.1",
-    "download-file": "^0.1.5",
     "eslint": "^1.3.1",
     "lodash": "^3.10.1",
+    "log-update": "^1.0.2",
     "read": "^1.0.7",
     "text-table": "^0.2.0",
     "wgetjs": "^0.3.6",
