--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "adbkit": "^2.3.1",
+    "ansi-escapes": "^1.1.0",
     "axios": "^0.7.0",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
