Apply jscs camelCase rule more specifically

--- a/.jscsrc
+++ b/.jscsrc
@@ -6,7 +6,7 @@
   "disallowTrailingComma": true,
   "validateQuoteMarks": "\"",
   "maximumLineLength": 100,
-  "requireCamelCaseOrUpperCaseIdentifiers": false,
+  "requireCamelCaseOrUpperCaseIdentifiers": true,
   "requirePaddingNewLinesAfterBlocks": {
     "allExcept": ["inCallExpressions"]
   }
