--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
   "name": "deploy-droid",
-  "version": "0.0.1",
-  "private": true,
-  "main": "main.js",
+  "version": "0.1.0",
+  "description": "Automated deployment for HockeyApp Android applications",
+  "respository": "artcom/deploy-droid",
+  "files": [
+    "dist/"
+  ],
+  "bin": {
+    "dock": "dist/main.js"
+  },
   "scripts": {
     "prepublish": "babel src --out-dir dist --source-maps",
     "debug": "npm run prepublish && node-debug dist/main.js",
     "start": "npm run prepublish && node dist/main.js"
   },
-  "engines": {
-    "node": "4.x.x"
-  },
   "dependencies": {
     "adbkit": "^2.3.1",
     "ansi-escapes": "^1.1.0",
     "axios": "^0.7.0",
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
     "bluebird": "^3.0.5",
     "colors": "^1.1.2",
     "docopt": "^0.6.2",
-    "eslint": "^1.3.1",
     "lodash": "^3.10.1",
     "log-update": "^1.0.2",
     "read": "^1.0.7",
     "text-table": "^0.2.0",
     "wgetjs": "^0.3.6",
     "yn": "^1.2.0"
-  }
+  },
+  "devDependencies": {
+    "babel": "^5.8.29",
+    "babel-eslint": "^4.1.4",
+    "eslint": "^1.8.0"
+  },
+  "license": "MIT"
 }
