--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist/"
   ],
   "bin": {
-    "dock": "dist/main.js"
+    "deploy-droid": "dist/main.js"
   },
   "scripts": {
     "prepublish": "babel src --out-dir dist --source-maps",
