Update description in README and package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deploy-droid",
   "version": "0.2.2",
-  "description": "Automated deployment for HockeyApp Android applications",
+  "description": "Automated installation of Android applications from HockeyApp",
   "repository": "artcom/deploy-droid",
   "files": [
     "dist/"
