--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "debug": "npm run prepublish && node-debug dist/main.js",
     "start": "npm run prepublish && node dist/main.js"
   },
+  "engines": {
+    "node": "5.x.x"
+  },
   "dependencies": {
     "adbkit": "^2.3.1",
     "ansi-escapes": "^1.1.0",
