--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "devDependencies": {
     "babel": "^5.8.29",
     "babel-eslint": "^4.1.4",
-    "eslint": "^1.8.0"
+    "eslint": "^1.8.0",
+    "eslint-plugin-flow-vars": "^0.1.3"
   },
   "license": "MIT"
 }
